# road-rage-2022-interactive-scenarios

./: .gitignore  README.md  install.sh  requirements.txt
config/: cr_sumo_config_1.py  cr_sumo_config_base.py
misc/sumo_gui/: CMakeLists.txt  SOLUTION.camke
misc/sumo_gui/src/gui/: CMakeLists.txt
outputs/simulated_scenarios/: DEU_Cologne-63_5_I-1_no_ego.xml  DEU_Cologne-63_5_I-1_planner.xml  DEU_Cologne-63_5_I-1_solution.xml
outputs/solutions/: solution_KS1:TR1:DEU_Aachen-2_1_I-1:2020a.xml  solution_KS1:TR1:DEU_Aachen-3_1_I-1:2020a.xml  solution_KS1:TR1:DEU_Cologne-63_5_I-1:2020a.xml  solution_KS1:TR1:DEU_Frankfurt-34_11_I-1:2020a.xml  solution_KS2:SM1:USA_US101-26_2_I-1-1:2020a.xml  solution_KS2:SM1:USA_US101-26_2_I-1:2020a.xml
scenarios/SUMO/CHN_Cho-1_1_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-1_2_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-1_3_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-1_4_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-1_5_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-2_10_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-2_1_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-2_2_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-2_3_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-2_4_I-1-1/: simulation_config.p
scenarios/SUMO/CHN_Cho-2_5_I-1-1/: simulation_config.p
simulation/: simulations.py  utility.py
tutorials/: 1_tutorial_scenario_simulation.ipynb  minimal_example.py
tutorials/solutions/: solution_KS1:TR1:DEU_Frankfurt-34_10_I-1:2020a.xml
(+1552 files in other folders)
